test/tests/stages/9_functions/valid/no_arguments/function_shadows_variable.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[54]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(foo)
  =
  const int(3)
  ;
  int
  identifier(bar)
  =
  const int(4)
  ;
  if
  (
  identifier(foo)
  +
  identifier(bar)
  >
  const int(0)
  )
  {
  int
  identifier(foo)
  (
  void
  )
  ;
  identifier(bar)
  =
  identifier(foo)
  (
  )
  ;
  }
  return
  identifier(foo)
  +
  identifier(bar)
  ;
  }
  int
  identifier(foo)
  (
  void
  )
  {
  return
  const int(8)
  ;
  }
