test/tests/stages/9_functions/invalid_types/divide_by_function.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  int
  identifier(x)
  (
  void
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(10)
  /
  identifier(x)
  ;
  return
  const int(0)
  ;
  }
